--- a/src/main/res/message_box/layout/message_input_box_black_normal.xml
+++ b/src/main/res/message_box/layout/message_input_box_black_normal.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="300dp"
-        android:layout_height="110dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:background="@drawable/message_box_circle">
@@ -16,12 +16,13 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:gravity="center"
-            android:layout_height="36dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/mainMassage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:text="Title"
