--- a/src/main/res/number_picker/layout/number_picker.xml
+++ b/src/main/res/number_picker/layout/number_picker.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:orientation="horizontal">
 
 
@@ -28,7 +30,6 @@
         android:inputType="number"
         android:minWidth="40dp"
         android:text="199"
-
         android:textColor="#333"
         android:textSize="16sp" />
 
